# gpu-bio-inspired

./: .gitignore  CMakeLists.txt  cp  error  input  jobScript  js  makefile  output  test_aco_cu
genetic_algo/inc/: city.h  dist_matrix.h  genetic_algo.h  genetic_help.h  population.h  tour.h
genetic_algo/src/: city.cc  dist_matrix.cc  genetic_algo.cc  genetic_help.cc  population.cc  tour.cc
graphs/: test01  test02  test02_coord
include/: .ant_colony.h.swp  ant_colony.h
src/: .ant_colony.cu.swo  .ant_colony.cu.swp  .util.cu.swp  ant_colony.cpp  ant_colony.cu  ant_colony.ocu  graph.cpp  graph.cu  util.cpp  util.cu
tests/: .test_aco.cu.swo  .test_aco.cu.swp  ant_colony_tsp.cu  test_aco.cpp  test_aco.cu
